--- a/AutoPay.Web/appsettings.json
+++ b/AutoPay.Web/appsettings.json
@@ -15,7 +15,7 @@
   "AppSettings": {
     "AppTitle": "Auto Pay",
     "AppVersion": "1.0.0",
-    "BaseUrl": "https://localhost:44394/",
+    "BaseUrl": "http://localhost:5000/",
     "DefaultPageSize": 10
   }
 }
